<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="end"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnHomeProduct"
        android:backgroundTint="#0E62A5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_home_product" />

    <Button
        android:id="@+id/btnHomeService"
        android:backgroundTint="#0E62A5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_home_service" />

    <Button
        android:id="@+id/btnHomeBranch"
        android:backgroundTint="#0E62A5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_home_branch" />
</LinearLayout>