<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#C7E2F6"
    tools:context=".ProductForm">

    <TextView
        android:id="@+id/textTitleForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/text_title_form" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageForm"
            android:layout_width="350dp"
            android:layout_height="350dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNameForm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_name_form" />

            <EditText
                android:id="@+id/editNameForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDescriptionForm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_desc_form" />

            <EditText
                android:id="@+id/editDescriptionForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPriceForm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_price_form" />

            <EditText
                android:id="@+id/editPriceForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_form" />
</LinearLayout>