<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C7E2F6"
    android:gravity="center"
    tools:context=".ServiceForm">

    <TextView
        android:id="@+id/textTitleServiceForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/text_title_service_form" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageServiceForm"
            android:layout_width="350dp"
            android:layout_height="350dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNameServiceForm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_name_service_form" />

            <EditText
                android:id="@+id/editNameServiceForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDescriptionServiceForm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_desc_service_form" />

            <EditText
                android:id="@+id/editDescriptionServiceForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPriceServiceForm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_price_service_form" />

            <EditText
                android:id="@+id/editPriceServiceForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnServiceForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_service_form" />
</LinearLayout>