<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".BranchForm">

    <TextView
        android:id="@+id/textTitleBranchForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/text_title_branch_form" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageBranchForm"
            android:layout_width="350dp"
            android:layout_height="350dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNameBranchForm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_name_branch_form" />

            <EditText
                android:id="@+id/editNameBranchForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textPhoneBranchForm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/text_phone_branch_form" />

            <EditText
                android:id="@+id/editPhoneBranchForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnBranchForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_branch_form" />
</LinearLayout>